# franka_fr3_mtc_playground

./: .gitignore  .gitmodules  README.md  frames_2026-03-05_01.46.44.gv  run_docker.sh
.devcontainer/: .env  devcontainer.json  docker-compose.yml  initial_setup.sh
src/franka_fr3_bringup/: CMakeLists.txt  package.xml
src/franka_fr3_bringup/config/: ros_gz_bridge_config.yaml
src/franka_fr3_bringup/launch/: fr3_gazebo.launch.py  fr3_gazebo_bringup.launch.py
src/franka_fr3_description/: CMakeLists.txt  README.md  package.xml
src/franka_fr3_description/end_effectors/common/: utils.xacro
src/franka_fr3_description/end_effectors/franka_hand/: franka_hand.srdf.xacro
src/franka_fr3_description/env-hooks/: franka_fr3_description.dsv  franka_fr3_description.sh.in
src/franka_fr3_description/robots/common/: franka_arm.ros2_control.xacro  franka_arm.srdf.xacro  franka_arm.xacro  franka_robot.xacro  group_definition.xacro  utils.xacro
src/franka_fr3_description/robots/fr3/: fr3.srdf.xacro  fr3.urdf.xacro
src/franka_fr3_gazebo/: CMakeLists.txt  README.md  package.xml
src/franka_fr3_gazebo/env-hooks/: franka_fr3_gazebo.dsv  franka_fr3_gazebo.sh.in
src/franka_fr3_gazebo/worlds/: panda_world.sdf
src/franka_fr3_moveit_config/: CMakeLists.txt  package.xml
src/franka_fr3_moveit_config/config/: gazebo_controllers.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml
src/franka_fr3_moveit_config/launch/: fr3_move_group.launch.py  fr3_move_group_no_rviz.launch.py
src/franka_fr3_moveit_config/rviz/: moveit.rviz
src/franka_ros2_packages/franka_gazebo/franka_gazebo_bringup/: CMakeLists.txt
src/franka_ros2_packages/franka_ros2/: package.xml
src/vlm_det_any_pose/: package.xml  setup.cfg  setup.py
src/vlm_det_any_pose/vlm_det_any_pose/: vit_pose_run.py
(+2 files in other folders)
